# api-rci

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/application/: get_resort_details.rs  get_resort_packages.rs  list_all_inclusive_resorts.rs  mod.rs  quote_all_inclusive.rs  search_resorts.rs  validate_session.rs
src/domain/: errors.rs  models.rs  ports.rs
src/infrastructure/: config.rs  http.rs  mod.rs  redis_session.rs
src/interfaces/http/: errors.rs  mod.rs  routes.rs
