[package]
name = "api-rci"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.7"
http = "1"
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tower = "0.5"
